// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@keen/charts <PieChart /> - utils should calculate position for labels placed "outer" of slice 1`] = `
Array [
  Object {
    "index": "2",
    "label": "17.5%",
    "labelPosition": Array [
      -64.46120845287824,
      47.37882021319842,
    ],
    "path": "M-15.259309192973875,36.97503864708221A40,40,0,0,1,-39.844291629220365,3.525964345486152L-19.911978874904634,1.874325821556A20,20,0,0,0,-7.732886549756835,18.444578217150692Z",
    "pathActive": "M-22.871230654503954,55.469872979379346A60,60,0,0,1,-59.768125321345984,5.2698382870711145L-19.903084490799646,1.9665268246557444A20,20,0,0,0,-7.8182285429034675,18.408566007457765Z",
  },
  Object {
    "index": "0",
    "label": "35.1%",
    "labelPosition": Array [
      71.38033908947152,
      -36.12266866487115,
    ],
    "path": "M0.22360586605615126,-39.99937500032551A40,40,0,0,1,32.362527900091514,23.508866155469907L16.24672216033534,11.663790937978462A20,20,0,0,0,0.22360586605615285,-19.99874997135234Z",
    "pathActive": "M0.31622644840280334,-59.99916666782407A60,60,0,0,1,48.53251532023908,35.27881739359695L16.300568041896867,11.588420147349272A20,20,0,0,0,0.3162264484027922,-19.997499864566336Z",
  },
  Object {
    "index": "4",
    "label": "8.8%",
    "labelPosition": Array [
      -21.76827718762678,
      -76.98144002474004,
    ],
    "path": "M-20.756095086890987,-34.193340239642275A40,40,0,0,1,-0.2236058660561739,-39.99937500032551L-0.22360586605615085,-19.99874997135234A20,20,0,0,0,-10.28230949638974,-17.154419588562398Z",
    "pathActive": "M-31.150538996801437,-51.28005382416006A60,60,0,0,1,-0.31622644840281067,-59.99916666782407L-0.3162264484027946,-19.997499864566336A20,20,0,0,0,-10.2027495775673,-17.201857488581002Z",
  },
  Object {
    "index": "3",
    "label": "17.5%",
    "labelPosition": Array [
      -71.38033908947153,
      -36.12266866487113,
    ],
    "path": "M-39.881222081345754,3.080280068172383A40,40,0,0,1,-21.137083441337694,-33.95914756871745L-10.663297850836408,-16.92022691763759A20,20,0,0,0,-19.948909327030016,1.4286415442422165Z",
    "pathActive": "M-59.820352867606275,4.639545537557507A60,60,0,0,1,-31.689337894766147,-50.948855372729795L-10.741548475532,-16.870659037150748A20,20,0,0,0,-19.955312037059933,1.336234075142154Z",
  },
  Object {
    "index": "1",
    "label": "21.1%",
    "labelPosition": Array [
      21.768277187626843,
      76.98144002474002,
    ],
    "path": "M32.09767334692924,23.869213764048208A40,40,0,0,1,-14.844970176382976,37.14332861312109L-7.3185475331659315,18.612868183189576A20,20,0,0,0,15.981867607173065,12.024138546556763Z",
    "pathActive": "M48.157954419100726,35.7884258688171A60,60,0,0,1,-22.28526679782075,55.70787093176285L-7.2322646862202795,18.646563959841263A20,20,0,0,0,15.926007140758514,12.098028622569416Z",
  },
]
`;

exports[`@keen/charts <PieChart /> - utils should calculate properties for each arc 1`] = `
Array [
  Object {
    "index": "2",
    "label": "17.5%",
    "labelPosition": Array [
      -26.858836855365933,
      19.74117508883268,
    ],
    "path": "M-15.259309192973875,36.97503864708221A40,40,0,0,1,-39.844291629220365,3.525964345486152L-19.911978874904634,1.874325821556A20,20,0,0,0,-7.732886549756835,18.444578217150692Z",
    "pathActive": "M-22.871230654503954,55.469872979379346A60,60,0,0,1,-59.768125321345984,5.2698382870711145L-19.903084490799646,1.9665268246557444A20,20,0,0,0,-7.8182285429034675,18.408566007457765Z",
  },
  Object {
    "index": "0",
    "label": "35.1%",
    "labelPosition": Array [
      29.74180795394647,
      -15.051111943696313,
    ],
    "path": "M0.22360586605615126,-39.99937500032551A40,40,0,0,1,32.362527900091514,23.508866155469907L16.24672216033534,11.663790937978462A20,20,0,0,0,0.22360586605615285,-19.99874997135234Z",
    "pathActive": "M0.31622644840280334,-59.99916666782407A60,60,0,0,1,48.53251532023908,35.27881739359695L16.300568041896867,11.588420147349272A20,20,0,0,0,0.3162264484027922,-19.997499864566336Z",
  },
  Object {
    "index": "4",
    "label": "8.8%",
    "labelPosition": Array [
      -9.070115494844492,
      -32.07560001030836,
    ],
    "path": "M-20.756095086890987,-34.193340239642275A40,40,0,0,1,-0.2236058660561739,-39.99937500032551L-0.22360586605615085,-19.99874997135234A20,20,0,0,0,-10.28230949638974,-17.154419588562398Z",
    "pathActive": "M-31.150538996801437,-51.28005382416006A60,60,0,0,1,-0.31622644840281067,-59.99916666782407L-0.3162264484027946,-19.997499864566336A20,20,0,0,0,-10.2027495775673,-17.201857488581002Z",
  },
  Object {
    "index": "3",
    "label": "17.5%",
    "labelPosition": Array [
      -29.741807953946473,
      -15.051111943696304,
    ],
    "path": "M-39.881222081345754,3.080280068172383A40,40,0,0,1,-21.137083441337694,-33.95914756871745L-10.663297850836408,-16.92022691763759A20,20,0,0,0,-19.948909327030016,1.4286415442422165Z",
    "pathActive": "M-59.820352867606275,4.639545537557507A60,60,0,0,1,-31.689337894766147,-50.948855372729795L-10.741548475532,-16.870659037150748A20,20,0,0,0,-19.955312037059933,1.336234075142154Z",
  },
  Object {
    "index": "1",
    "label": "21.1%",
    "labelPosition": Array [
      9.070115494844519,
      32.07560001030834,
    ],
    "path": "M32.09767334692924,23.869213764048208A40,40,0,0,1,-14.844970176382976,37.14332861312109L-7.3185475331659315,18.612868183189576A20,20,0,0,0,15.981867607173065,12.024138546556763Z",
    "pathActive": "M48.157954419100726,35.7884258688171A60,60,0,0,1,-22.28526679782075,55.70787093176285L-7.2322646862202795,18.646563959841263A20,20,0,0,0,15.926007140758514,12.098028622569416Z",
  },
]
`;
